# thinking_skill

./: .coverage  .env.example  .gitignore  README.md  agent.md  constitution.md  docker-compose.yml  main.py  pr_description.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
agents/: graph.py  prompts.py  runner.py  state.py
app/: main.py
app/admin/: dashboard.py
app/domain/: entities.py  interfaces.py
app/interfaces/: mcp_server.py
app/usecases/: manage_debates.py  run_debate.py  sync_debates.py
backlog/: queue.md
config/: mcpo.json  openwebui_tool_script.py
configs/: personas.yaml
docs/: admin-guide.md  architecture.md  core-loop-architecture.md  data-storage-policy.md  mcp-guide.md  open-webui-guide.md  setup-guide.md
scripts/: inspect_mcp.py  verify_mcp.py  verify_model_upgrade.py  verify_sse.py  verify_tool_calling.py  verify_youtube_manual.py
specs/000-initial-discussion/: spec.md
specs/001-foundation-setup/: plan.md  pr_description.md  spec.md  task.md
specs/002-core-loop-mvp/: plan.md  pr_description.md  spec.md  task.md
specs/003-integration-mvp/: spec.md  task.md
specs/004-clean-arch/: plan.md  pr_description.md  spec.md  task.md
specs/004.5-tdd/: plan.md  pr_description.md  spec.md  task.md
specs/005-interface-mvp/: plan.md  pr_description.md  spec.md  task.md
specs/005.1-docs/: plan.md  spec.md  task.md
specs/005.5-streaming/: plan.md  pr_description.md  spec.md  task.md
specs/006-webui/: pr_description.md  task.md
specs/007-obsidian/: plan.md  pr_description.md  (+2 more)
utils/: automation.py  storage.py
(+80 files in other folders)
